[package]
name = "khepri_headerchain_feeder"
authors      = ["Abdelhamid Bakhta <abdelhamid.bakhta@gmail.com>"]
categories   = ["bitcoin", "light-client", "stark"]
description  = "Bitcoin Header chain fetcher."
edition      = "2021"
homepage     = "https://github.com/bitcoin-stark/khepri/khepri-headerchain-feeder"
keywords     = ["p2p", "sync", "nats", "streaming"]
license-file = "LICENSE"
readme       = "README.md"
repository   = "https://github.com/bitcoin-stark/khepri/khepri-headerchain-feeder"
version      = "0.0.1"


[dependencies]
anyhow = "1.0.57"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"