[package]
name = "khepri_headerchain_fetcher"
authors      = ["Abdelhamid Bakhta <abdelhamid.bakhta@gmail.com>"]
categories   = ["bitcoin", "light-client", "stark"]
description  = "Bitcoin Header chain fetcher."
edition      = "2021"
homepage     = "https://github.com/bitcoin-stark/khepri/khepri-headerchain-fetcher"
keywords     = ["p2p", "sync", "nats", "streaming"]
license-file = "LICENSE"
readme       = "README.md"
repository   = "https://github.com/bitcoin-stark/khepri/khepri-headerchain-fetcher"
version      = "0.0.1"


[dependencies]
