[package]
authors      = ["Abdelhamid Bakhta <abdelhamid.bakhta@gmail.com>"]
categories   = ["bitcoin", "light-client", "stark"]
description  = "Bitcoin Header chain fetcher."
edition      = "2021"
homepage     = "https://github.com/bitcoin-stark/khepri/khepri-headerchain-fetcher"
keywords     = ["p2p", "sync", "nats", "streaming"]
license-file = "LICENSE"
name         = "khepri_headerchain_fetcher"
readme       = "README.md"
repository   = "https://github.com/bitcoin-stark/khepri/khepri-headerchain-fetcher"
version      = "0.0.1"


[dependencies]
anyhow = "1.0.57"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "1.0.137"

serde_json = "1.0.81"
bitcoin = { version= "0.21", features=["use-serde"]}
bitcoin_hashes = "0.7"
mio = "0.6"
rand = "0.7"
simple_logger = "0.5.0"
byteorder = "1.2"
lru-cache = "0.1.1"
futures-preview = "=0.3.0-alpha.18"
futures-timer = "0.3"
hammersbald = { version= "3.0.1", features=["bitcoin_support"] }
